Fix erroneous page scrolls when trying to select text or use form elements with the Web Inspector docked.

http://webkit.org/b/24403
rdar://problem/6753925

Reviewed by John Sullivan and Darin Adler.

* WebCoreSupport/WebChromeClient.mm:
(WebChromeClient::scrollRectIntoView): The scrollRect.move() call was
incorrectly converting the rect under the assumption that the frame view
is the same size as the WebView. Using convertRect:fromView: instead
is enough to fix the bug, but that code isn't needed since WebCore
already takes care of scrolling the main frame's document view, so it
was redundant to do it here too.

Canonical link: https://commits.webkit.org/44955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53556 268f45cc-cd09-0410-ab3c-d52691b4dbfc